--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "scripts": {
     "start": "grunt connect:server",
     "postinstall": "npm run start"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.9.3",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-newer": "^1.1.0"
   }
 }
